--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             display: flex;
             flex-direction: column;
         }
-
         .chat-container {
             background: white;
             border-radius: 10px;
@@ -27,45 +26,36 @@
             overflow-y: auto;
             margin-bottom: 20px;
         }
-
         .input-area {
             margin-top: 20px;
         }
-
         .chat-bubble {
             margin-bottom: 10px;
             padding: 10px;
             border-radius: 10px;
         }
-
         .chat-bubble-primary {
             background-color: transparent;
             color: black;
         }
-
         .chat-bubble-secondary {
             background-color: transparent;
             color: black;
         }
-
         .copy-button {
             color: blue;
             text-decoration: none;
             cursor: pointer;
         }
-
         .copy-button:hover {
             text-decoration: underline;
         }
-
         .message-content p {
             margin-bottom: 0.5em;
         }
-
         .message-content ul {
             margin-left: 20px;
         }
-
         .message-role {
             font-weight: bold;
             margin-bottom: 5px;
@@ -82,6 +72,7 @@
             </a>
         </div>
 
+        <!-- Tombol untuk memulai chat baru -->
         <div class="mb-4 text-left">
             <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">Clear Chat</button>
         </div>
@@ -100,6 +91,7 @@
             <div v-if="typing" class="text-gray-500 italic">assistant sedang mengetik...</div>
         </div>
 
+        <!-- Area input pesan -->
         <div class="input-area flex items-center">
             <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
             <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
@@ -108,6 +100,7 @@
         </div>
     </div>
 
+    <!-- Tambahan paragraf di bawah chatbot -->
     <p class="text-center mt-4">Dibuat oleh Raya Fadilla Azhar</p>
 
     <script type="module">
@@ -115,7 +108,7 @@
             el: '#app',
             data: {
                 inputMessage: '',
-                messages: JSON.parse(localStorage.getItem('chatHistory')) || [], 
+                messages: JSON.parse(localStorage.getItem('chatHistory')) || [], // Ambil chat dari localStorage
                 typing: false,
                 firstInteraction: true,
             },
@@ -125,7 +118,7 @@
                         const userMessage = { role: "user", content: this.cleanUpLinks(this.inputMessage) };
                         this.inputMessage = '';
                         this.messages.push(userMessage);
-                        this.saveChatHistory();
+                        this.saveChatHistory(); // Simpan chat setiap kali ada pesan baru
 
                         this.sendToDiscord('User', userMessage.content);
                         this.typing = true;
@@ -133,14 +126,15 @@
                         const data = await generateText(this.messages);
                         this.typing = false;
                         this.messages.push({ role: "assistant", content: this.cleanUpLinks(data) });
-                        this.saveChatHistory();
+                        this.saveChatHistory(); // Simpan chat setelah balasan dari asisten
+
                         this.sendToDiscord('Assistant', data);
                     }
                 },
 
                 clearChat() {
                     this.messages = [];
-                    this.saveChatHistory(); 
+                    this.saveChatHistory(); // Hapus riwayat dari localStorage
                 },
 
                 saveChatHistory() {
@@ -155,9 +149,7 @@
                     // Mengganti tanda ** di awal dan akhir teks dengan tag <strong> untuk teks tebal
                     content = content.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
                     // Mengganti newlines dengan tag <br>
-                    content = content.replace(/\n/g, '<br>');
-                    // Mengganti angka 1., 2., dst. dengan list item
-                    return content.replace(/(\d\.\s)/g, '<ul><li>$1</li></ul>');
+                    return content.replace(/\n/g, '<br>');
                 },
 
                 copyToClipboard(content) {
@@ -196,7 +188,6 @@
                     }
                 }
             },
-
             mounted() {
                 if (this.messages.length === 0) {
                     this.firstInteraction = true;
@@ -209,14 +200,14 @@
             const hf = new HfInference('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');
 
             const response = await hf.chatCompletion({
-                model: "mistralai/Mixtral-8x7B-Instruct-v0.1",
-                messages: messages,
-                max_tokens: 500,
-                temperature: 0.3,
-                seed: 0,
+                model: "mistralai/Mixtral-8x7B-Instruct",
+                messages: messages.map((msg) => ({
+                    role: msg.role,
+                    content: msg.content,
+                })),
             });
 
-            return response.choices[0].message.content;
+            return response.generated_text;
         }
     </script>
 </body>
